<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FreeCourses">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/loginpagedesign"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/freecourse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/software_design_and_analysis"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,OnClick" />

        <Button
            android:id="@+id/freecourse2"
            android:layout_width="211dp"
            android:layout_height="46dp"
            android:text="@string/theory_of_automata"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/freecourse1"
            app:layout_constraintVertical_bias="0.162"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/freecourse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_networks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.325"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/loginpagedesign2"/>
    </LinearLayout>


</RelativeLayout>