<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaidCourses">
    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/loginpagedesign"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="533dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="97dp"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/paidcourse1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paidcourse1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.092"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/paidcourse2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paidcourse2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.358"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/paidcourse3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paidcourse3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"/>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <View

            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/loginpagedesign2"/>
    </LinearLayout>


</RelativeLayout>